se agrego el header, menu lateral y componente de buscar cotizacion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <ng-template #elseBlock>
     <div class="container-app">
         <app-menu></app-menu>
-        <app-header></app-header>
+        <app-header [title]="title"></app-header>
         <div class="container-main">
             <router-outlet></router-outlet>
         </div>
