--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<div class="header-container">
+    <div class="header-title">
+        <h1>{{title}}</h1>
+    </div>
+    <div class="header-profile">
+        <button mat-stroked-button>
+            <div class="button-content">
+                <img src="assets/img/perfil.png" alt="Perfil">
+                <h1>Perfil</h1>
+            </div>
+        </button>
+    </div>
+</div>
