--- a/src/app/shared/menu/menu.component.css
+++ b/src/app/shared/menu/menu.component.css
@@ -27,3 +27,7 @@
 .mat-button, .mat-raised-button{
     background-color: var(--primary-color);
 } 
+
+.mat-button:hover, .mat-raised-button:hover{
+    background-color: var(--secondary-color);
+}
