--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -12,14 +12,14 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$interfaces-proyecto-primary: mat-palette($mat-indigo);
+$interfaces-proyecto-primary: mat-palette($mat-blue,800);
 $interfaces-proyecto-accent: mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$interfaces-proyecto-warn: mat-palette($mat-red);
+$interfaces-proyecto-warn: mat-palette($mat-teal, A400);
 
 // Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
+// theming systems such as "color" or "typography"
 $interfaces-proyecto-theme: mat-light-theme((
   color: (
     primary: $interfaces-proyecto-primary,
