--- a/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.css
+++ b/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.css
@@ -1,6 +1,107 @@
-.container-buscar-cotizacion {
+.main-container {
     width: 100%;
     height: 100%;
     background-color: var(--form-color);
-    padding: 0 70px;
+    padding: 40px 70px;
+    display: grid;
+    grid-template-columns: 87% 1fr;
+    grid-template-rows: 15% 1fr;
+    grid-template-areas: 
+    'seeker button'
+    'table button'
+    ;
 }
+
+.seeker{
+    width: 50%;
+    grid-area: seeker;
+}
+
+.button-container{
+    grid-area: button;
+    display: flex;
+    align-items: flex-end;
+    justify-content:space-evenly;
+    flex-direction: column;
+}
+
+mat-form-field {
+    width: 100%;
+}
+
+mat-label, input {
+    font-size: 16px;
+    background-color: var(--form-color);
+}
+
+.table {
+    padding:0;
+    margin: 0;
+    height: 470px;
+    width: 100%;
+    overflow: scroll;
+    overflow-x: hidden;
+    align-items: center;
+    justify-content: center;
+    grid-area: table;
+}
+
+.mat-row:nth-child(even){
+    background-color: var(--third-color);
+}
+        
+.mat-row:nth-child(odd){
+    background-color: var(--third-color);
+}
+
+.mat-header-cell {
+    background: var(--primary-color);
+    color: white !important;
+}
+
+.mat-row {
+    align-items: center;
+    justify-content: center;
+}
+
+table { 
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.mat-fab{
+    background-color: var(--secondary-color);
+    width: 75px;
+    height: 75px;
+    align-items: center;
+} 
+
+.mat-fab img {
+    pointer-events: none;
+}
+
+.mat-fab:hover{
+    background-color: var(--third-color);
+}
+
+.nuevo { 
+    width: 60%
+}
+
+/* ::ng-deep .seeker > .mat-focused .mat-form-field-label {
+    color: black !important;
+} */
+
+/* ::ng-deep .mat-focused .mat-form-field-label {
+    color: var(--secondary-color) !important;
+} 
+
+::ng-deep.mat-form-field-underline {
+    background-color: var(--secondary-color) !important;
+} 
+  
+::ng-deep.mat-form-field-label {
+   background-color: white !important;
+} */
