--- a/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.html
+++ b/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.html
@@ -1,3 +1,51 @@
-<div class="container-buscar-cotizacion">
-    <p>Hola</p>
+<div class="main-container">
+    <div class="seeker">
+        <mat-form-field appearance="outline" class="example-full-width" color="accent">
+            <mat-label>Buscar</mat-label>
+            <input class="seekerInput" autocomplete="off" matInput type="text">
+        </mat-form-field>
+    </div>
+    <div class="table mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource">
+              <!-- Position Column -->
+            <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef> No. </th>
+                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            </ng-container>
+            
+                <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+            
+                <!-- Weight Column -->
+            <ng-container matColumnDef="weight">
+                <th mat-header-cell *matHeaderCellDef> Weight </th>
+                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            </ng-container>
+            
+                <!-- Symbol Column -->
+            <ng-container matColumnDef="symbol">
+                <th mat-header-cell *matHeaderCellDef> Symbol </th>
+                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            </ng-container>
+            
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+          
+        <mat-paginator [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
+    </div>
+    <div class="button-container">
+        <button mat-fab color="primary" (click)="onSubmitNew" matTooltip="Agregar Cotizacion" aria-label="Se muestra un mensaje" >
+            <img class="nuevo" alt="" src="assets/img/agregar.png">
+        </button>
+        <button mat-fab color="primary" (click)="onSubmitEdit">
+            <img class="nuevo" alt="" src="assets/img/editar.png">
+        </button>
+        <button mat-fab color="primary" (click)="onSubmitDelete">
+            <img class="nuevo" alt="" src="assets/img/eliminar.png">
+        </button>
+    </div>
 </div>
