--- a/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.css
+++ b/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.css
@@ -2,5 +2,77 @@
     width: 100%;
     height: 100%;
     background-color: var(--form-color);
-    padding: 0 70px;
+    padding: 20px 70px;
 }
+
+table {
+    width: 100%;
+}
+  
+.mat-form-field {
+    font-size: 14px;
+    width: 100%;
+}
+  
+td, th {
+    width: 25%;
+}
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 4px 4px 4px 0px rgba(0,0,0,0.25);
+}
+
+mat-label, input {
+    font-size: 16px;
+}
+
+.mat-form-field-width {
+    width: 100%;
+}
+
+.mat-paginator-sticky {
+    bottom: 0px;
+    position: sticky;
+    z-index: 10;
+    border-top: 1px solid #e0e0e0;
+}
+
+.table-container {
+    height: 270px;
+    overflow: auto;
+}
+
+.actions-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.primary-color {
+    color: var(--primary-color);
+}
+
+.primary-color-btn {
+    background-color: var(--primary-color);
+}
+
+.buscador-agregar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.buscador-agregar button {
+    margin-left: 10%;
+    margin-bottom: 10px;
+}
+
+
+/*::ng-deep .mat-paginator-range-label{
+    display: none !important;
+}*/
+
+/*::ng-deep .mat-paginator-page-size{
+    display: none !important;
+}*/
