--- a/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.html
+++ b/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.html
@@ -1,3 +1,67 @@
 <div class="container-buscar-cotizacion">
-    <p>Hola</p>
+    <div class="buscador-agregar">
+        <mat-form-field appearance="outline" class="mat-form-field-width">
+            <mat-label>Buscar</mat-label>
+            <input matInput (keyup)="applyFilter($event)" #input>
+            <span matSuffix>
+                <mat-icon matPrefix>search</mat-icon>
+            </span>
+        </mat-form-field>
+        <button class="primary-color-btn" mat-fab aria-label="Example icon button with a heart icon">
+            <mat-icon>add</mat-icon>
+        </button>
+    </div>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+
+            <!-- ID Column -->
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+            </ng-container>
+
+            <!-- Progress Column -->
+            <ng-container matColumnDef="progress">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
+                <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+            </ng-container>
+
+            <!-- Color Column -->
+            <ng-container matColumnDef="color">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
+                <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
+            </ng-container>
+
+            <!-- Actions Column -->
+            <ng-container matColumnDef="acciones">
+                <th mat-header-cell *matHeaderCellDef> Acciones </th>
+                <td mat-cell *matCellDef="let row">
+                    <div class="actions-container">
+                        <button mat-icon-button aria-label="Example icon button with a heart icon" (click)="onDelete(row)">
+                            <mat-icon color="warn">delete</mat-icon>
+                        </button>
+                        <button mat-icon-button aria-label="Example icon button with a heart icon">
+                            <mat-icon class="primary-color">edit</mat-icon>
+                        </button>
+                    </div>
+                 </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+        </table>
+
+        <mat-paginator class="mat-paginator-sticky" [pageSizeOptions]="[5, 10]"></mat-paginator>
+    </div>
 </div>
