--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 70px;
+    background-color: white;
 }
 
 .header-title h1 {
