--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 :root {
     --primary-color: #154360;
     --secondary-color: #2980B9;
-    --third-color: #7FB3D5;
+    --third-color: #5FA0CB;
     --form-color: #f1f1f1;
 }
 
