--- a/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.css
+++ b/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.css
@@ -1,8 +1,23 @@
 .main-container {
     width: 100%;
     height: 100%;
-    background-color: var(--form-color);
+    /* background-color: var(--form-color); */
     padding: 20px 70px;
+}
+
+.seeker-add {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.seeker-add button {
+    margin-left: 5%;
+    margin-bottom: 10px;
+}
+
+.search-icon {
+    color: var(--secondary-color);
 }
 
 table {
@@ -14,12 +29,13 @@ table {
     width: 100%;
 }
   
-td, th {
+td, th{
+    justify-content: center;
     width: 25%;
 }
 
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-    background-color: white;
+    /* background-color: white; */
     border-radius: 5px;
     box-shadow: 4px 4px 4px 0px rgba(0,0,0,0.25);
 }
@@ -49,24 +65,21 @@ mat-label, input {
     flex-direction: row;
 }
 
-.primary-color {
-    color: var(--primary-color);
+.dark mat-icon {
+    color: #ECEFF1 !important;
 }
 
-.primary-color-btn {
-    background-color: var(--primary-color);
+.light mat-icon {
+    color: #fff !important;
 }
 
-.buscador-agregar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
+/* .add-btn:hover{
+    background-color: var(--third-color);
+} */
 
-.buscador-agregar button {
-    margin-left: 10%;
-    margin-bottom: 10px;
-}
+/* .table-btn:hover {
+    background-color: var(--form-color);
+} */
 
 /*::ng-deep .mat-paginator-range-label{
     display: none !important;
