--- a/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.html
+++ b/src/app/pages/buscar-cotizacion/buscar-cotizacion.component.html
@@ -1,17 +1,17 @@
-<div class="container-buscar-cotizacion">
-    <div class="buscador-agregar">
-        <mat-form-field appearance="outline" class="mat-form-field-width">
+<div class="main-container">
+    <div class="seeker-add">
+        <mat-form-field appearance="outline" class="mat-form-field-width" color="accent">
             <mat-label>Buscar</mat-label>
             <input matInput (keyup)="applyFilter($event)" #input>
             <span matSuffix>
-                <mat-icon matPrefix>search</mat-icon>
+                <mat-icon color="accent" class="search-icon" matPrefix>search</mat-icon>
             </span>
         </mat-form-field>
-        <button class="primary-color-btn" mat-fab aria-label="Example icon button with a heart icon">
+        <button  [class]='colorMode' class="add-btn" mat-fab matTooltip="Crear Cotización" [color] = "color" (mouseover) =" color = 'warn'" (mouseout) =" color = 'accent'">
             <mat-icon>add</mat-icon>
         </button>
     </div>
-    <div class="mat-elevation-z8">
+    <div class="mat-elevation-z8 table">
         <table mat-table [dataSource]="dataSource" matSort>
 
             <!-- ID Column -->
@@ -43,11 +43,11 @@
                 <th mat-header-cell *matHeaderCellDef> Acciones </th>
                 <td mat-cell *matCellDef="let row">
                     <div class="actions-container">
-                        <button mat-icon-button aria-label="Example icon button with a heart icon" (click)="onDelete(row)">
-                            <mat-icon color="warn">delete</mat-icon>
+                        <button class="table-btn" mat-icon-button mat-button aria-label="Example icon button with a heart icon" matTooltip="Editar Cotización" >
+                            <mat-icon class="edit-button" color="accent" >edit</mat-icon>
                         </button>
-                        <button mat-icon-button aria-label="Example icon button with a heart icon">
-                            <mat-icon class="primary-color">edit</mat-icon>
+                        <button class="table-btn" mat-icon-button mat-button aria-l0000abel="Example icon button with a heart icon"  matTooltip="Eliminar Cotización" (click)="onDelete(row)">
+                            <mat-icon style="color: #F44336;">delete</mat-icon>
                         </button>
                     </div>
                  </td>
@@ -62,6 +62,6 @@
             </tr>
         </table>
 
-        <mat-paginator class="mat-paginator-sticky" [pageSizeOptions]="[5, 10]"></mat-paginator>
+        <mat-paginator class="mat-paginator-sticky" [pageSizeOptions]="[7]"></mat-paginator>
     </div>
 </div>
